Product images no longer distort when scaling to fit product card

--- a/client/src/components/RelatedItemsAndComparisons/styles.css
+++ b/client/src/components/RelatedItemsAndComparisons/styles.css
@@ -33,6 +33,7 @@
   border: solid;
   border-radius: 8px;
   margin: 10px;
+  object-fit: cover;
 }
 
 .category {
